# spark

./: .gitignore  LICENSE  README.md
.github/workflows/: release-plugin-weibo.yml
app/: package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
app/src/: main.ts  plugin-loader.ts  plugin-sdk-browser.ts
app/src-tauri/: Cargo.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/commands/: data.rs  docs.rs  dto.rs  evidence.rs  mod.rs  org.rs  p2p.rs  plugin.rs
app/src-tauri/src/market/: catalog.rs  mod.rs  permissions.rs  trust.rs
core/: Cargo.toml
core/examples/: lab_node.rs
core/src/: lib.rs
core/src/collection/: mod.rs
core/src/data-mgmt/: cleanup.rs  constants.rs  exporter.rs  mod.rs  purge.rs  service.rs  usage.rs  watermark.rs
core/src/evidence/: canonical.rs  chain.rs  mod.rs
core/src/identity/: crypto.rs  derive.rs  error.rs  file.rs  mnemonic.rs  mod.rs  slip10.rs
core/src/kernel/: error.rs  host.rs  identity.rs  mod.rs  org_sync.rs
core/src/org/: claim.rs  invite.rs  mod.rs  plugin_docs.rs  pull.rs  recovery.rs  replica.rs  service.rs  snapshot.rs  sync_state.rs  tx.rs  types.rs
core/src/p2p/: announce.rs  behaviour.rs  constants.rs  direct.rs  envelope.rs  host.rs  identity_store.rs  keepalive.rs  listen_port.rs  mod.rs  node.rs  overlay_store.rs  peer_activity.rs  peer_targets.rs
core/src/schema/: mod.rs
core/src/storage/: contract.rs  mod.rs  sled.rs
core/src/sync/: apply.rs  meta.rs  mod.rs
core/tests/: identity_vectors.rs  kernel_integration.rs  org_vectors.rs  p2p_integration.rs  sync_apply.rs  sync_evidence_vectors.rs
desktop/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
desktop/src/: App.vue  env.d.ts  plugin-loader.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src-tauri/src/commands/: identity.rs  market.rs
desktop/src-tauri/src/market/: mod.rs  semver.rs  types.rs
desktop/src/api/: index.ts
desktop/src/pages/: TestPage.vue
desktop/src/tests/plugins/: weibo-core.model.test.ts  weibo-core.service.test.ts
plugins/: README.md  package.json
plugins/scripts/: build-weibo-package.mjs
plugins/weibo-core/: WeiboCoreView.vue  index.ts  manifest.ts  service.ts
spec/: README.md  data-mgmt.md  identity.md  org.md  p2p-messages.md  sync-evidence.md
spec/vectors/: identity.json  org.json  sync-evidence.json
(+1 files in other folders)
